# chatmail2mastodon

./: .prospector.yaml  MANIFEST.in  README.md  pylama.ini  pyproject.toml
.github/workflows/: python-ci.yml
chatmail2mastodon/: __init__.py  cli.py  hooks.py  migrations.py  orm.py  util.py
requirements/: requirements-dev.txt  requirements.txt
